--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ video {
     xhr.onreadystatechange = function () {
       if (xhr.readyState === XMLHttpRequest.DONE) {
         // Sau khi submit thành công, chuyển hướng đến Google Form
-        window.open('https://docs.google.com/forms/d/e/1FAIpQLSfd3-jq0yB1sOVzUo-ynxH-vgN36yc--lh3g0QviiJG_dJBrQ/viewform', '_blank');
+        //window.open('https://docs.google.com/forms/d/e/1FAIpQLSfd3-jq0yB1sOVzUo-ynxH-vgN36yc--lh3g0QviiJG_dJBrQ/viewform', '_blank');
       }
     };
     xhr.send(formData);
