--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ video {
     event.preventDefault();
 
     // Hiển thị thông báo
-    alert("Nhấn OK để gửi thông tin cho chúng tôi, chúng tôi sẽ liên hệ bạn sớm nhất có thể. <br> Cảm ơn bạn đã đăng ký nhé!!!");
+    alert("Nhấn OK để gửi thông tin cho chúng tôi. Cảm ơn bạn đã đăng ký nhé!!!");
 
     // Tạo một form ẩn để submit dữ liệu đến Google Form
     const form = event.target;
