--- a/index.html
+++ b/index.html
@@ -812,12 +812,12 @@ video {
   <h2>Hàng Nghìn Phụ Huynh Đã Tin Tưởng</h2>
   <div class="stats-container">
     <div class="stat-item">
-      <div class="stat-number" id="studentCount">1500+</div>
-      <div class="stat-text">Học Viên Đã Theo Học</div>
+      <div class="stat-number" id="studentCount">1000+</div>
+      <div class="stat-text">Học Viên Đã Được Hỗ Trợ</div>
     </div>
     <div class="stat-item">
-      <div class="stat-number" id="classCount">300+</div>
-      <div class="stat-text">Lớp Học Đã Mở</div>
+      <div class="stat-number" id="classCount">100+</div>
+      <div class="stat-text">Giờ Dạy Hàng Tuần</div>
     </div>
     <div class="stat-item">
       <div class="stat-number" id="successRate">95%</div>
