--- a/index-menu.html
+++ b/index-menu.html
@@ -51,7 +51,7 @@
     h1, h2, h3 {
       font-family: "Baloo Bhaina 2", serif;
       font-weight: Bold;
-      color: #8B7355;
+      color: #F2EBE2;
     }
 
     /* ========== NAVBAR STYLES ========== */
@@ -103,7 +103,7 @@
       font-family: "Baloo Bhaina 2", serif;
       font-weight: 800;
       font-size: 22px;
-      color: #8B7355;
+      color: #F2EBE2;
       display: flex;
       flex-direction: column;
       line-height: 1.1;
@@ -111,7 +111,7 @@
 
     .logo-subtext {
       font-size: 11px;
-      color: #D4B483;
+      color: #fcbe5d;
       font-weight: 600;
       letter-spacing: 1px;
     }
@@ -149,13 +149,13 @@
       left: 0;
       width: 0;
       height: 3px;
-      background: linear-gradient(to right, #D4B483, #8B7355);
+      background: linear-gradient(to right, #fcbe5d, #F2EBE2);
       border-radius: 2px;
       transition: width 0.3s ease;
     }
 
     .nav-menu a:hover {
-      color: #D4B483;
+      color: #fcbe5d;
     }
 
     .nav-menu a:hover::after {
@@ -163,7 +163,7 @@
     }
 
     .nav-menu a.active {
-      color: #D4B483;
+      color: #fcbe5d;
     }
 
     .nav-menu a.active::after {
@@ -205,7 +205,7 @@
 
     .dropdown-content a:hover {
       background: linear-gradient(to right, #fff8e1, #fff);
-      color: #D4B483;
+      color: #fcbe5d;
       padding-left: 25px;
     }
 
@@ -235,7 +235,7 @@
     }
 
     .nav-cta .cta-button {
-      background: linear-gradient(135deg, #D4B483, #e0a800);
+      background: linear-gradient(135deg, #fcbe5d, #e0a800);
       color: white;
       padding: 12px 28px;
       border-radius: 50px;
@@ -252,7 +252,7 @@
     .nav-cta .cta-button:hover {
       transform: translateY(-3px);
       box-shadow: 0 6px 20px rgba(245, 181, 54, 0.4);
-      background: linear-gradient(135deg, #ffc107, #D4B483);
+      background: linear-gradient(135deg, #ffc107, #fcbe5d);
     }
 
     /* Hamburger Menu (Mobile) */
@@ -269,7 +269,7 @@
     .hamburger span {
       width: 25px;
       height: 3px;
-      background: #8B7355;
+      background: #F2EBE2;
       margin: 4px 0;
       transition: 0.3s;
       border-radius: 2px;
@@ -354,7 +354,7 @@
 
 /* Nút CTA */
 .floating-cta-button {
-  background: linear-gradient(to bottom, #FFFFFF, #D4B483);
+  background: linear-gradient(to bottom, #FFFFFF, #fcbe5d);
   color: #333;
   padding: 15px 25px;
   border-radius: 50px;
@@ -396,7 +396,7 @@
       transform: translateX(-50%);
       width: 80px;
       height: 4px;
-      background: linear-gradient(to right, #D4B483, #8B7355);
+      background: linear-gradient(to right, #fcbe5d, #F2EBE2);
       border-radius: 2px;
     }
 
@@ -453,7 +453,7 @@ video {
 
 .benefits-header h2::before {
   content: '"';
-  color: #D4B483;
+  color: #fcbe5d;
   font-size: 80px;
   position: absolute;
   top: -40px;
@@ -462,7 +462,7 @@ video {
 
 .benefits-header h2::after {
   content: '"';
-  color: #D4B483;
+  color: #fcbe5d;
   font-size: 80px;
   position: absolute;
   bottom: -60px;
@@ -492,7 +492,7 @@ video {
 
 .benefit-card:hover {
   transform: translateY(-10px);
-  border-color: #D4B483;
+  border-color: #fcbe5d;
   box-shadow: 0 15px 35px rgba(245, 181, 54, 0.15);
 }
 
@@ -511,7 +511,7 @@ video {
 .benefit-card h3 {
   margin-top: 40px;
   font-size: 24px;
-  color: #8B7355;
+  color: #F2EBE2;
   margin-bottom: 15px;
 }
 
@@ -535,7 +535,7 @@ video {
 
 .curriculum h2 {
   font-size: 36px;
-  color: #8B7355;
+  color: #F2EBE2;
   margin-bottom: 50px;
   position: relative;
   display: inline-block;
@@ -549,7 +549,7 @@ video {
   transform: translateX(-50%);
   width: 100px;
   height: 4px;
-  background: linear-gradient(to right, #8B7355, #D4B483);
+  background: linear-gradient(to right, #F2EBE2, #fcbe5d);
   border-radius: 2px;
 }
 
@@ -584,7 +584,7 @@ video {
 }
 
 .curriculum-text p strong {
-  color: #8B7355;
+  color: #F2EBE2;
   background: linear-gradient(transparent 60%, #fff176 60%);
   padding: 0 3px;
 }
@@ -633,7 +633,7 @@ video {
 .testimonials h2 {
   font-size: 36px;
   margin-bottom: 50px;
-  color: #8B7355;
+  color: #F2EBE2;
   position: relative;
   display: inline-block;
 }
@@ -646,7 +646,7 @@ video {
   transform: translateX(-50%);
   width: 100px;
   height: 4px;
-  background: linear-gradient(to right, #D4B483, #8B7355);
+  background: linear-gradient(to right, #fcbe5d, #F2EBE2);
   border-radius: 2px;
 }
 
@@ -724,7 +724,7 @@ video {
 
     /* Form đăng ký */
     .registration {
-  background: linear-gradient(135deg, #8B7355 0%, #A1885F 100%);
+  background: linear-gradient(135deg, #F2EBE2 0%, #faca7a 100%);
       color: white;
       padding: 70px 20px;
       text-align: center;
@@ -760,13 +760,13 @@ video {
 
     .registration input:focus {
       outline: none;
-      border-color: #D4B483;
+      border-color: #fcbe5d;
       box-shadow: 0 0 0 3px rgba(245, 181, 54, 0.2);
       transform: translateY(-2px);
     }
 
     .registration button {
-      background: linear-gradient(135deg, #D4B483, #ffc107);
+      background: linear-gradient(135deg, #fcbe5d, #ffc107);
       color: #333;
       padding: 18px 40px;
       border: none;
@@ -781,7 +781,7 @@ video {
     }
 
     .registration button:hover {
-      background: linear-gradient(135deg, #ffc107, #D4B483);
+      background: linear-gradient(135deg, #ffc107, #fcbe5d);
       transform: translateY(-3px);
       box-shadow: 0 8px 25px rgba(245, 181, 54, 0.4);
     }
@@ -801,7 +801,7 @@ video {
     .social-proof h2 {
       font-size: 36px;
       margin-bottom: 50px;
-      color: #8B7355;
+      color: #F2EBE2;
       position: relative;
       display: inline-block;
     }
@@ -814,7 +814,7 @@ video {
       transform: translateX(-50%);
       width: 100px;
       height: 4px;
-      background: linear-gradient(to right, #8B7355, #D4B483);
+      background: linear-gradient(to right, #F2EBE2, #fcbe5d);
       border-radius: 2px;
     }
     
@@ -844,7 +844,7 @@ video {
     .stat-number {
       font-size: 48px;
       font-weight: bold;
-      color: #D4B483;
+      color: #fcbe5d;
       margin-bottom: 15px;
       font-family: "Baloo Bhaina 2", serif;
     }
@@ -874,7 +874,7 @@ video {
       width: 50px;
       height: 50px;
       border: 5px solid #f3f3f3;
-      border-top: 5px solid #D4B483;
+      border-top: 5px solid #fcbe5d;
       border-radius: 50%;
       animation: spin 1s linear infinite;
       margin: 0 auto 20px;
@@ -939,12 +939,12 @@ video {
     }
 
     .close-popup:hover {
-      color: #D4B483;
+      color: #fcbe5d;
       background: #f8f9fa;
     }
     
     .popup-content h3 {
-      color: #8B7355;
+      color: #F2EBE2;
       margin-bottom: 20px;
       font-size: 24px;
     }
@@ -958,7 +958,7 @@ video {
 
     /* ========== FOOTER STYLES ========== */
     .footer {
-      background: linear-gradient(135deg, #2d1b69 0%, #8B7355 100%);
+      background: linear-gradient(135deg, #2d1b69 0%, #F2EBE2 100%);
       color: white;
       padding: 60px 20px 30px;
       margin-top: 60px;
@@ -986,12 +986,12 @@ video {
       content: '';
       width: 30px;
       height: 3px;
-      background: #D4B483;
+      background: #fcbe5d;
       display: block;
     }
 
     .footer-section h4 {
-      color: #D4B483;
+      color: #fcbe5d;
       font-size: 18px;
       margin-bottom: 20px;
       position: relative;
@@ -1033,13 +1033,13 @@ video {
     }
 
     .footer-section ul li a:hover {
-      color: #D4B483;
+      color: #fcbe5d;
       padding-left: 5px;
     }
 
     .footer-section ul li a::before {
       content: '→';
-      color: #D4B483;
+      color: #fcbe5d;
       font-size: 12px;
       opacity: 0;
       transition: opacity 0.3s;
@@ -1070,7 +1070,7 @@ video {
     }
 
     .footer-bottom p:last-child {
-      color: #D4B483;
+      color: #fcbe5d;
       font-weight: 600;
     }
 
