--- a/index-menu.html
+++ b/index-menu.html
@@ -51,7 +51,7 @@
     h1, h2, h3 {
       font-family: "Baloo Bhaina 2", serif;
       font-weight: Bold;
-      color: #F2EBE2;
+      color: #f7d281;
     }
 
     /* ========== NAVBAR STYLES ========== */
@@ -103,7 +103,7 @@
       font-family: "Baloo Bhaina 2", serif;
       font-weight: 800;
       font-size: 22px;
-      color: #F2EBE2;
+      color: #f7d281;
       display: flex;
       flex-direction: column;
       line-height: 1.1;
@@ -149,7 +149,7 @@
       left: 0;
       width: 0;
       height: 3px;
-      background: linear-gradient(to right, #fcbe5d, #F2EBE2);
+      background: linear-gradient(to right, #fcbe5d, #f7d281);
       border-radius: 2px;
       transition: width 0.3s ease;
     }
@@ -269,7 +269,7 @@
     .hamburger span {
       width: 25px;
       height: 3px;
-      background: #F2EBE2;
+      background: #f7d281;
       margin: 4px 0;
       transition: 0.3s;
       border-radius: 2px;
@@ -396,7 +396,7 @@
       transform: translateX(-50%);
       width: 80px;
       height: 4px;
-      background: linear-gradient(to right, #fcbe5d, #F2EBE2);
+      background: linear-gradient(to right, #fcbe5d, #f7d281);
       border-radius: 2px;
     }
 
@@ -511,7 +511,7 @@ video {
 .benefit-card h3 {
   margin-top: 40px;
   font-size: 24px;
-  color: #F2EBE2;
+  color: #f7d281;
   margin-bottom: 15px;
 }
 
@@ -535,7 +535,7 @@ video {
 
 .curriculum h2 {
   font-size: 36px;
-  color: #F2EBE2;
+  color: #f7d281;
   margin-bottom: 50px;
   position: relative;
   display: inline-block;
@@ -549,7 +549,7 @@ video {
   transform: translateX(-50%);
   width: 100px;
   height: 4px;
-  background: linear-gradient(to right, #F2EBE2, #fcbe5d);
+  background: linear-gradient(to right, #f7d281, #fcbe5d);
   border-radius: 2px;
 }
 
@@ -584,7 +584,7 @@ video {
 }
 
 .curriculum-text p strong {
-  color: #F2EBE2;
+  color: #f7d281;
   background: linear-gradient(transparent 60%, #fff176 60%);
   padding: 0 3px;
 }
@@ -633,7 +633,7 @@ video {
 .testimonials h2 {
   font-size: 36px;
   margin-bottom: 50px;
-  color: #F2EBE2;
+  color: #f7d281;
   position: relative;
   display: inline-block;
 }
@@ -646,7 +646,7 @@ video {
   transform: translateX(-50%);
   width: 100px;
   height: 4px;
-  background: linear-gradient(to right, #fcbe5d, #F2EBE2);
+  background: linear-gradient(to right, #fcbe5d, #f7d281);
   border-radius: 2px;
 }
 
@@ -724,7 +724,7 @@ video {
 
     /* Form đăng ký */
     .registration {
-  background: linear-gradient(135deg, #F2EBE2 0%, #faca7a 100%);
+  background: linear-gradient(135deg, #f7d281 0%, #faca7a 100%);
       color: white;
       padding: 70px 20px;
       text-align: center;
@@ -801,7 +801,7 @@ video {
     .social-proof h2 {
       font-size: 36px;
       margin-bottom: 50px;
-      color: #F2EBE2;
+      color: #f7d281;
       position: relative;
       display: inline-block;
     }
@@ -814,7 +814,7 @@ video {
       transform: translateX(-50%);
       width: 100px;
       height: 4px;
-      background: linear-gradient(to right, #F2EBE2, #fcbe5d);
+      background: linear-gradient(to right, #f7d281, #fcbe5d);
       border-radius: 2px;
     }
     
@@ -944,7 +944,7 @@ video {
     }
     
     .popup-content h3 {
-      color: #F2EBE2;
+      color: #f7d281;
       margin-bottom: 20px;
       font-size: 24px;
     }
@@ -958,7 +958,7 @@ video {
 
     /* ========== FOOTER STYLES ========== */
     .footer {
-      background: linear-gradient(135deg, #2d1b69 0%, #F2EBE2 100%);
+      background: linear-gradient(135deg, #2d1b69 0%, #f7d281 100%);
       color: white;
       padding: 60px 20px 30px;
       margin-top: 60px;
