--- a/index.html
+++ b/index.html
@@ -1698,7 +1698,7 @@ video {
       <p><strong>Thứ 2 - Chủ nhật:</strong> 8:00 - 20:00</p>
       <p><strong>Học thử:</strong> Miễn phí 2 buổi</p>
       <p><strong>Lớp học:</strong> 5 học viên/lớp</p>
-      <p><strong>Độ tuổi:</strong> 6-15 tuổi</p>
+      <p><strong>Độ tuổi:</strong> 6 tuổi trở lên</p>
     </div>
   </div>
   
