--- a/index.html
+++ b/index.html
@@ -1526,11 +1526,11 @@ video {
     <ul class="nav-menu" id="navMenu">
       <li><a href="#intro" class="nav-link">Giới thiệu</a></li>
       <li><a href="#benefits" class="nav-link">Lợi ích</a></li>
-      <li><a href="#curriculum" class="nav-link">Chương trình</a></li>
+      <li><a href="#curriculum" class="nav-link">Giáo trình</a></li>
       <li><a href="#testimonials" class="nav-link">Phản hồi</a></li>
-      <li><a href="#registration" class="nav-link">Đăng ký</a></li>
+
       <li class="dropdown">
-        <a href="javascript:void(0)" class="nav-link">Trò chơi <span>▼</span></a>
+        <a href="javascript:void(0)" class="nav-link">Games<span class="hot-badge">hot</span></a>
         <div class="dropdown-content">
           <a href="https://wshoangnguyen.github.io/scrambledword/word-find.html" target="_blank">
             <img src="word-find.png" alt="Word Find Icon" class="game-icon" loading="lazy">
@@ -1547,7 +1547,7 @@ video {
     </ul>
     
     <div class="nav-cta">
-      <a href="#registration" class="cta-button">Học thử miễn phí</a>
+      <a href="#registration" class="cta-button">Học thử</a>
     </div>
     
     <button class="hamburger" id="hamburger">
