--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
 
     /* Game icon styles */
     .game-icon {
-      width: 24px;
-      height: 24px;
+      width: 30px;
+      height: 30px;
       border-radius: 6px;
       object-fit: contain;
       flex-shrink: 0;
@@ -236,7 +236,7 @@
       display: inline-block;
       background: linear-gradient(45deg, #ff0000, #ff6b6b);
       color: white;
-      font-size: 10px;
+      font-size: 7px;
       font-weight: bold;
       padding: 3px 8px;
       border-radius: 12px;
@@ -1754,7 +1754,7 @@ video {
           </a>
         </li>
         <li>
-          <a href="https://wshoangnguyen.github.io/scrambledword/scrambled-word.html" target="_blank" class="game-link">
+          <a href="https://hoctienganhdelam.com/game/scrambled-word.html" target="_blank" class="game-link">
             <img src="scrambled-word.png" alt="Scrambled Word Icon" class="game-icon" loading="lazy">
             Xếp chữ tiếng Anh
           </a>
