--- a/index.html
+++ b/index.html
@@ -1537,7 +1537,7 @@ video {
             Tìm từ tiếng Anh
             <span class="hot-badge">HOT</span>
           </a>
-          <a href="https://wshoangnguyen.github.io/scrambledword/scrambled-word.html" target="_blank">
+          <a href="https://hoctienganhdelam.com/game/scrambled-word.html" target="_blank">
             <img src="scrambled-word.png" alt="Scrambled Word Icon" class="game-icon" loading="lazy">
             Xếp chữ tiếng Anh
           </a>
