--- a/index.html
+++ b/index.html
@@ -1532,7 +1532,7 @@ video {
       <li class="dropdown">
         <a href="javascript:void(0)" class="nav-link">Games<span class="hot-badge">hot</span></a>
         <div class="dropdown-content">
-          <a href="https://wshoangnguyen.github.io/scrambledword/word-find.html" target="_blank">
+          <a href="https://hoctienganhdelam.com/game/word-find.html" target="_blank">
             <img src="word-find.png" alt="Word Find Icon" class="game-icon" loading="lazy">
             Tìm từ tiếng Anh
             <span class="hot-badge">HOT</span>
@@ -1747,7 +1747,7 @@ video {
       <h4>Trò chơi giáo dục</h4>
       <ul>
         <li>
-          <a href="https://wshoangnguyen.github.io/scrambledword/word-find.html" target="_blank" class="game-link">
+          <a href="https://hoctienganhdelam.com/game/word-find.html" target="_blank" class="game-link">
             <img src="word-find.png" alt="Word Find Icon" class="game-icon" loading="lazy">
             Tìm từ tiếng Anh
             <span class="hot-badge">HOT</span>
