--- a/index.html
+++ b/index.html
@@ -1532,14 +1532,18 @@ video {
       <li class="dropdown">
         <a href="javascript:void(0)" class="nav-link">Games<span class="hot-badge">hot</span></a>
         <div class="dropdown-content">
-          <a href="https://hoctienganhdelam.com/game/word-find.html" target="_blank">
+          <a href="game/word-find.html" target="_blank">
             <img src="word-find.png" alt="Word Find Icon" class="game-icon" loading="lazy">
             Tìm từ tiếng Anh
             <span class="hot-badge">HOT</span>
           </a>
-          <a href="https://hoctienganhdelam.com/game/scrambled-word.html" target="_blank">
+          <a href="game/scrambled-word.html" target="_blank">
             <img src="scrambled-word.png" alt="Scrambled Word Icon" class="game-icon" loading="lazy">
-            Xếp chữ tiếng Anh
+            Xếp chữ tiếng Anh<span class="hot-badge">HOT</span>
+          </a>
+          <a href="game/sentence-builder.html" target="_blank">
+            <img src="sentence-builder.png" alt="Scrambled Word Icon" class="game-icon" loading="lazy">
+            Xếp từ tiếng Anh<span class="hot-badge">HOT</span>
           </a>
         </div>
       </li>
@@ -1747,19 +1751,25 @@ video {
       <h4>Trò chơi giáo dục</h4>
       <ul>
         <li>
-          <a href="https://hoctienganhdelam.com/game/word-find.html" target="_blank" class="game-link">
+          <a href="game/word-find.html" target="_blank" class="game-link">
             <img src="word-find.png" alt="Word Find Icon" class="game-icon" loading="lazy">
             Tìm từ tiếng Anh
             <span class="hot-badge">HOT</span>
           </a>
         </li>
         <li>
-          <a href="https://hoctienganhdelam.com/game/scrambled-word.html" target="_blank" class="game-link">
+          <a href="game/scrambled-word.html" target="_blank" class="game-link">
             <img src="scrambled-word.png" alt="Scrambled Word Icon" class="game-icon" loading="lazy">
-            Xếp chữ tiếng Anh
+            Xếp chữ tiếng Anh<span class="hot-badge">HOT</span>
           </a>
         </li>
-        <li><a href="blog.html">Blog học tiếng Anh</a></li>
+        <li>
+      <a href="game/sentence-builder.html" target="_blank" class="game-link">
+        <img src="sentence-builder.png" alt="Sentence Builder Icon" class="game-icon" loading="lazy">
+        Xếp từ tiếng Anh<span class="hot-badge">HOT</span>
+      </a>
+    </li>
+    <li><a href="blog.html">Blog học tiếng Anh</a></li>
       </ul>
     </div>
     
