--- a/index.html
+++ b/index.html
@@ -1543,7 +1543,7 @@ video {
           </a>
           <a href="game/sentence-builder.html" target="_blank">
             <img src="sentence-builder.png" alt="Scrambled Word Icon" class="game-icon" loading="lazy">
-            Xếp từ tiếng Anh<span class="hot-badge">HOT</span>
+            Xếp từ tiếng Anh<span class="hot-badge">new</span>
           </a>
         </div>
       </li>
@@ -1766,7 +1766,7 @@ video {
         <li>
       <a href="game/sentence-builder.html" target="_blank" class="game-link">
         <img src="sentence-builder.png" alt="Sentence Builder Icon" class="game-icon" loading="lazy">
-        Xếp từ tiếng Anh<span class="hot-badge">HOT</span>
+        Xếp từ tiếng Anh<span class="hot-badge">new</span>
       </a>
     </li>
     <li><a href="blog.html">Blog học tiếng Anh</a></li>
