Add random game link to index.html

--- a/index.html
+++ b/index.html
@@ -1545,6 +1545,10 @@ video {
             <img src="sentence-builder.png" alt="Scrambled Word Icon" class="game-icon" loading="lazy">
             Xếp từ tiếng Anh<span class="hot-badge">new</span>
           </a>
+      <a href="game/random.html" target="_blank" class="game-link">
+        <img src="random.png" alt="Random" class="game-icon" loading="lazy">
+        Lựa chọn ngẫu nhiên
+      </a>
         </div>
       </li>
       <li><a href="blog.html" class="nav-link">Blog</a></li>
@@ -1767,6 +1771,12 @@ video {
       <a href="game/sentence-builder.html" target="_blank" class="game-link">
         <img src="sentence-builder.png" alt="Sentence Builder Icon" class="game-icon" loading="lazy">
         Xếp từ tiếng Anh<span class="hot-badge">new</span>
+      </a>
+    </li>
+        <li>
+      <a href="game/random.html" target="_blank" class="game-link">
+        <img src="random.png" alt="Random" class="game-icon" loading="lazy">
+        Lựa chọn ngẫu nhiên
       </a>
     </li>
     <li><a href="blog.html">Blog học tiếng Anh</a></li>
