--- a/game/random.html
+++ b/game/random.html
@@ -409,7 +409,7 @@
         <div class="left-panel">
             <div class="input-section">
                 <h2><i class="fas fa-users"></i> Danh sách người tham gia</h2>
-                <textarea id="nameList" placeholder="Nhập danh sách tên (mỗi tên một dòng hoặc cách nhau bằng dấu phẩy)&#10;Ví dụ:&#10; Nguyễn Văn A (có dấu cách = ưu tiên)&#10;Trần Thị B&#10; Lê Văn C (có dấu cách = ưu tiên)&#10;Phạm Thị D"></textarea>
+                <textarea id="nameList" placeholder="Nhập danh sách tên (mỗi tên một dòng hoặc cách nhau bằng dấu phẩy)&#10;Ví dụ:&#10;Nguyễn Văn A&#10;Trần Thị B&#10;Lê Văn C&#10;Phạm Thị D"></textarea>
                 
                 <div class="settings">
                     <div class="setting-group">
