--- a/game/random.html
+++ b/game/random.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Chọn Người Trao Quà</title>
+    <title>Random</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -21,7 +21,7 @@
         }
         
         .container {
-            max-width: 1400px;
+           /* max-width: 1400px;*/
             margin: 0 auto;
             display: flex;
             gap: 30px;
@@ -173,13 +173,13 @@
         .names-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-            gap: 15px;
+            gap: 5px;
             height: 100%;
         }
         
         .name-item {
             background-color: rgba(255, 255, 255, 0.15);
-            padding: 20px 10px;
+            padding: 10px 10px;
             border-radius: 10px;
             text-align: center;
             font-weight: 600;
