--- a/index-bk.html
+++ b/index-bk.html
@@ -534,6 +534,18 @@ video {
     <div class="testimonial-card" onclick="openLightbox('tin-nhan-5.jpg')">
       <img src="tin-nhan-5.jpg" alt="Tin nhắn từ phụ huynh 5">
     </div>
+        <div class="testimonial-card" onclick="openLightbox('6.png')">
+      <img src="6.png" alt="Tin nhắn từ phụ huynh 6">
+    </div>
+        <div class="testimonial-card" onclick="openLightbox('7.png')">
+      <img src="7.png" alt="Tin nhắn từ phụ huynh 7">
+    </div>
+        <div class="testimonial-card" onclick="openLightbox('8.png')">
+      <img src="8.png" alt="Tin nhắn từ phụ huynh 8">
+    </div>
+        <div class="testimonial-card" onclick="openLightbox('9.png')">
+      <img src="9.png" alt="Tin nhắn từ phụ huynh 9">
+    </div>
   </div>
 
   <!-- Lightbox -->
@@ -607,3 +619,4 @@ video {
 </script>
 </body>
 </html>
+
