Add testimonials section and remove duplicate link

--- a/index.html
+++ b/index.html
@@ -1525,9 +1525,10 @@ video {
     
     <ul class="nav-menu" id="navMenu">
       <li><a href="#intro" class="nav-link">Giới thiệu</a></li>
+      <li><a href="#testimonials" class="nav-link">Phản hồi</a></li>
       <li><a href="#benefits" class="nav-link">Lợi ích</a></li>
       <li><a href="#curriculum" class="nav-link">Giáo trình</a></li>
-      <li><a href="#testimonials" class="nav-link">Phản hồi</a></li>
+
 
       <li class="dropdown">
         <a href="javascript:void(0)" class="nav-link">Games<span class="hot-badge">hot</span></a>
@@ -1624,6 +1625,40 @@ video {
   </div> 
 </div>
 
+  <!-- Cảm nhận từ phụ huynh -->
+<div class="testimonials" id="testimonials">
+  <h2>Phụ Huynh Nói Gì Về Chúng Tôi?</h2>
+  <div class="testimonial-grid">
+    <div class="testimonial-card" onclick="openLightbox('tin-nhan-1.jpg')">
+      <img src="tin-nhan-1.jpg" alt="Tin nhắn phản hồi tích cực từ phụ huynh 1" loading="lazy">
+    </div>
+    <div class="testimonial-card" onclick="openLightbox('tin-nhan-2.jpg')">
+      <img src="tin-nhan-2.jpg" alt="Tin nhắn phản hồi tích cực từ phụ huynh 2" loading="lazy">
+    </div>
+    <div class="testimonial-card" onclick="openLightbox('tin-nhan-3.jpg')">
+      <img src="tin-nhan-3.jpg" alt="Tin nhắn phản hồi tích cực từ phụ huynh 3" loading="lazy">
+    </div>
+    <div class="testimonial-card" onclick="openLightbox('tin-nhan-4.jpg')">
+      <img src="tin-nhan-4.jpg" alt="Tin nhắn phản hồi tích cực từ phụ huynh 4" loading="lazy">
+    </div>
+    <div class="testimonial-card" onclick="openLightbox('tin-nhan-5.jpg')">
+      <img src="tin-nhan-5.jpg" alt="Tin nhắn phản hồi tích cực từ phụ huynh 5" loading="lazy">
+    </div>
+            <div class="testimonial-card" onclick="openLightbox('6.png')">
+      <img src="6.png" alt="Tin nhắn từ phụ huynh 6">
+    </div>
+        <div class="testimonial-card" onclick="openLightbox('7.png')">
+      <img src="7.png" alt="Tin nhắn từ phụ huynh 7">
+    </div>
+        <div class="testimonial-card" onclick="openLightbox('8.png')">
+      <img src="8.png" alt="Tin nhắn từ phụ huynh 8">
+    </div>
+        <div class="testimonial-card" onclick="openLightbox('9.png')">
+      <img src="9.png" alt="Tin nhắn từ phụ huynh 9">
+    </div>
+  </div>
+</div>
+
 <!-- Lợi ích -->
 <div class="benefits" id="benefits">
   <div class="benefits-header">
@@ -1692,27 +1727,7 @@ video {
   </div>
 </div>
 
-<!-- Cảm nhận từ phụ huynh -->
-<div class="testimonials" id="testimonials">
-  <h2>Phụ Huynh Nói Gì Về Chúng Tôi?</h2>
-  <div class="testimonial-grid">
-    <div class="testimonial-card" onclick="openLightbox('tin-nhan-1.jpg')">
-      <img src="tin-nhan-1.jpg" alt="Tin nhắn phản hồi tích cực từ phụ huynh 1" loading="lazy">
-    </div>
-    <div class="testimonial-card" onclick="openLightbox('tin-nhan-2.jpg')">
-      <img src="tin-nhan-2.jpg" alt="Tin nhắn phản hồi tích cực từ phụ huynh 2" loading="lazy">
-    </div>
-    <div class="testimonial-card" onclick="openLightbox('tin-nhan-3.jpg')">
-      <img src="tin-nhan-3.jpg" alt="Tin nhắn phản hồi tích cực từ phụ huynh 3" loading="lazy">
-    </div>
-    <div class="testimonial-card" onclick="openLightbox('tin-nhan-4.jpg')">
-      <img src="tin-nhan-4.jpg" alt="Tin nhắn phản hồi tích cực từ phụ huynh 4" loading="lazy">
-    </div>
-    <div class="testimonial-card" onclick="openLightbox('tin-nhan-5.jpg')">
-      <img src="tin-nhan-5.jpg" alt="Tin nhắn phản hồi tích cực từ phụ huynh 5" loading="lazy">
-    </div>
-  </div>
-</div>
+
 
 <!-- Lightbox -->
 <div class="lightbox" id="lightbox" onclick="closeLightbox()">
@@ -1744,9 +1759,10 @@ video {
       <h4>Liên kết nhanh</h4>
       <ul>
         <li><a href="#intro">Giới thiệu</a></li>
+        <li><a href="#testimonials">Phản hồi phụ huynh</a></li>
         <li><a href="#benefits">Lợi ích</a></li>
         <li><a href="#curriculum">Chương trình học</a></li>
-        <li><a href="#testimonials">Phản hồi phụ huynh</a></li>
+        
         <li><a href="#registration">Đăng ký học thử</a></li>
       </ul>
     </div>
