--- a/index.html
+++ b/index.html
@@ -1554,6 +1554,7 @@ video {
       </li>
       <li><a href="blog.html" class="nav-link">Blog</a></li>
 	<li><a href="login.html" class="nav-link">Sổ điểm</a></li>
+			<li><a href="https://zoom.us/j/2096639147?pwd=BrT4hq8qp2HAiJN8XyUqdSQFgjuagh.1" class="nav-link">Vào lớp</a></li>
     </ul>
     
     <div class="nav-cta">
