Simplify title and Open Graph metadata
Updated the title and Open Graph title for better clarity.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@400..800&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Học Tiếng Anh Dễ Lắm - Tiếng Anh Online Cho Trẻ Em</title>
+  <title>Học Tiếng Anh Dễ Lắm</title>
   
   <!-- Meta tags SEO -->
   <meta name="description" content="Học tiếng Anh online hiệu quả cho trẻ em. Phương pháp học hiện đại, giáo viên chất lượng, lớp học chỉ 5 học viên. Sách Cambridge Super Minds, Prepare, Open World.">
   <meta name="keywords" content="học tiếng Anh, tiếng Anh online, tiếng Anh trẻ em, Cambridge, Super Minds, Prepare, Open World, lớp học tiếng Anh, học thử miễn phí">
   <meta name="author" content="Học Tiếng Anh Dễ Lắm">
-  <meta property="og:title" content="Học Tiếng Anh Dễ Lắm - Tiếng Anh Online Cho Trẻ Em">
+  <meta property="og:title" content="Học Tiếng Anh Dễ Lắm">
   <meta property="og:description" content="Phương pháp học tiếng Anh online hiệu quả, lớp chỉ 5 học viên, giáo viên chất lượng từ khắp thế giới.">
   <meta property="og:image" content="https://hoctienganhdelam.com/logo.png">
   <meta property="og:url" content="https://hoctienganhdelam.com">
@@ -1518,7 +1518,7 @@ video {
     <a href="#" class="logo">
       <img src="logo.png" alt="Học Tiếng Anh Dễ Lắm" class="logo-img">
       <div class="logo-text">
-        Học Tiếng Anh Dễ Lắm
+        
         <span class="logo-subtext">TIẾNG ANH CHO TRẺ EM</span>
       </div>
     </a>
