Add new game link for 'Words Fall' in index.html

--- a/index.html
+++ b/index.html
@@ -1546,6 +1546,10 @@ video {
             <img src="sentence-builder.png" alt="Scrambled Word Icon" class="game-icon" loading="lazy">
             Xếp từ tiếng Anh<span class="hot-badge">new</span>
           </a>
+			<a href="game/words-fall.html" target="_blank">
+            <img src="words-fall.png" alt="Words Fall Icon" class="game-icon" loading="lazy">
+            Dịch truyện tiếng Anh<span class="hot-badge">new</span>
+          </a>
       <a href="game/random.html" target="_blank" class="game-link">
         <img src="random.png" alt="Random" class="game-icon" loading="lazy">
         Lựa chọn ngẫu nhiên
@@ -1789,6 +1793,12 @@ video {
       <a href="game/sentence-builder.html" target="_blank" class="game-link">
         <img src="sentence-builder.png" alt="Sentence Builder Icon" class="game-icon" loading="lazy">
         Xếp từ tiếng Anh<span class="hot-badge">new</span>
+      </a>
+    </li>
+		<li>
+      <a href="game/words-fall.html" target="_blank" class="game-link">
+        <img src="words-fall.png" alt="Words fall icon" class="game-icon" loading="lazy">
+        Dịch truyện tiếng Anh<span class="hot-badge">new</span>
       </a>
     </li>
         <li>
