Simplify title and header for Words Fall game

--- a/game/words-fall.html
+++ b/game/words-fall.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Words Fall - Game dịch thuật cho bé</title>
+    <title>Words Fall</title>
     <style>
         /* ========== BRAND STYLES ========== */
         * {
@@ -1147,7 +1147,7 @@
         <div class="setup-section" id="setupSection">
             <div class="game-title-logo">
                 <img src="words-fall.png" alt="Words Fall Logo" onerror="this.style.display='none'">
-                <h1>Words Fall for Kids</h1>
+                <h1>Words Fall</h1>
             </div>
 
             <div class="mode-section">
