--- a/index.html
+++ b/index.html
@@ -1557,7 +1557,7 @@ video {
         </div>
       </li>
       <li><a href="blog.html" class="nav-link">Blog</a></li>
-	<li><a href="login.html" class="nav-link">Sổ điểm</a></li>
+	<li><a href="management/login.html" class="nav-link">Sổ điểm</a></li>
 			<li><a href="https://zoom.us/j/2096639147?pwd=BrT4hq8qp2HAiJN8XyUqdSQFgjuagh.1" class="nav-link">Vào lớp</a></li>
     </ul>
     
